add some header element

--- a/hello-there.html
+++ b/hello-there.html
@@ -2,12 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my website</title>
 </head>
 <body>
-    <h1>welcome world</h1>
-    <p>this is my journey to coding and am excited to br here
-    
+ <h1>welcome to my potfolio</h1>
+    <p>
+    i am excited to be here. Moringa is the best palce to be
     </p>
+    <p>written with some guidance from moringa</p>
 </body>
 </html>
