added some list element

--- a/hello-there.html
+++ b/hello-there.html
@@ -6,9 +6,20 @@
 </head>
 <body>
  <h1>welcome to my potfolio</h1>
+ <h2>its fun to code</h2>
     <p>
     i am excited to be here. Moringa is the best palce to be
     </p>
     <p>written with some guidance from moringa</p>
+    
+    <p>here are some of the things am going to learn about coding</p>
+    <ul>
+        <li>html</li>
+        <li>javascript</li>
+        <li>css</li>
+        <li>Bootstrap</li>
+    </ul>
+
+    <p>Apart from school, I also have some lifestyle that i live upto.</p>
 </body>
 </html>
