added some list elements

--- a/hello-there.html
+++ b/hello-there.html
@@ -20,6 +20,12 @@
         <li>Bootstrap</li>
     </ul>
 
-    <p>Apart from school, I also have some lifestyle that i live upto.</p>
+    <p>Apart from school, I also have some lifestyle that i live upto </p>
+    <h3>Here are some of the things</h3>
+    <ol>
+        <li>listening to music</li>
+        <li>meditating on God's presence</li>
+        <li>cooking</li>
+    </ol>
 </body>
 </html>
