added moringa link

--- a/hello-there.html
+++ b/hello-there.html
@@ -10,7 +10,7 @@
     <p>
     i am excited to be here. Moringa is the best palce to be
     </p>
-    <p>written with some guidance from moringa</p>
+    <p>written with some guidance from <em>moringa school</em></p>
     
     <p>here are some of the things am going to learn about coding</p>
     <ul>
@@ -24,8 +24,9 @@
     <h3>Here are some of the things</h3>
     <ol>
         <li>listening to music</li>
-        <li>meditating on God's presence</li>
-        <li>cooking</li>
+        <li>meditating on God's Presence <li>cooking</li>
     </ol>
+     <p>Check out <a href="http://moringaschool.com/">Moringa School</a>.It's a great place to learn web development skills!</p>
+     <p> here is the link <a href="my-favorite-thing.html">favorite thing</a> my favorite thing</p>
 </body>
 </html>
