added some image

--- a/my-favorite-thing.html
+++ b/my-favorite-thing.html
@@ -8,6 +8,7 @@
 <body>
     <h1>my pet</h1>
 <p>my<strong> favorite</strong>  pet is cat</p>
+<img src="images/cat.jpeg" alt="a photo of a cat">
 
 </body>
 </html>
